# AI-Advocate

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: manifest.yaml
docs/: LEARNING.md
src/ai_advocate/: __init__.py
src/ai_advocate/application/: ports.py
src/ai_advocate/application/use_cases/: ask_question.py  ingest_documents.py
src/ai_advocate/cli/: ingest.py  main.py
src/ai_advocate/domain/: exceptions.py  models.py
src/ai_advocate/infrastructure/: config.py  container.py  sqlite_compat.py
src/ai_advocate/infrastructure/graph/: filters.py  nodes.py  rag_graph.py  state.py
src/ai_advocate/infrastructure/llm/: embeddings.py  openai_client.py
src/ai_advocate/infrastructure/pdf/: chunker.py  loader.py  manifest.py
src/ai_advocate/infrastructure/vector_store/: chroma_store.py
src/ai_advocate/presentation/: streamlit_app.py
tests/: conftest.py
tests/unit/: test_chunker_section_context.py  test_embeddings_batch.py  test_manifest_parsing.py  test_settings_manifest.py
