[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-advocate"
version = "0.1.0"
description = "Legal RAG learning project: LangGraph + Chroma + Streamlit over Indian statutes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5,<1",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.2,<1",
    "langgraph>=0.2,<1",
    "pdfplumber>=0.11,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pysqlite3>=0.6.0",
    "python-dotenv>=1,<2",
    "pyyaml>=6,<7",
    "streamlit>=1.39,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "pytest-mock>=3,<4",
    "ruff>=0.8,<1",
]

[project.scripts]
ai-advocate-ingest = "ai_advocate.cli.ingest:main"
ai-advocate = "ai_advocate.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_advocate"]

[tool.hatch.build.targets.sdist]
include = ["src/ai_advocate", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: calls OpenAI; requires OPENAI_API_KEY",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.13",
]
